# backend-2

aula-1/: challenge.py  exercise.py  pyproject.toml
aula-10/: challenge.py  exercise.py  pyproject.toml
aula-11/: challenge.py  exercise.py  pyproject.toml
aula-12/: challenge.py  exercise.py  pyproject.toml
aula-13/: challenge.py  exercise.py  pyproject.toml
aula-14/: challenge.py  exercise.py  pyproject.toml
aula-15/: challenge.py  exercise.py  pyproject.toml
aula-16/: calculator.py  challenge.py  exercise.py  pyproject.toml  test_calculator.py
aula-16/.github/workflows/: ci-advanced.yml
aula-2/: api.py  challenge.py  exercise.py  pyproject.toml
aula-3/: challenge.py  exercise.py  pyproject.toml
aula-4/: challenge.py  exercise.py  pyproject.toml
aula-5/: challenge.py  exercise.py  pyproject.toml
aula-6/: challenge.py  exercise.py  pyproject.toml
aula-7/: challenge.py  exercise.py  pyproject.toml
aula-8/: challenge.py  challenge_test.py  exercise.py  exercise_test.py  pyproject.toml
aula-9/: challenge.py  exercise.py  pyproject.toml
