[tool.poetry]
name = "aula-13"
version = "0.1.0"
description = "Session 13: Django and FastAPI Best Practices"
authors = ["Student <student@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
django = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
