[tool.poetry]
name = "aula-15"
version = "0.1.0"
description = "Session 15: Advanced AI Agent Development with CrewAI"
authors = ["Student <student@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
crewai = "^0.28.8"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
