[tool.poetry]
name = "aula-16"
version = "0.1.0"
description = "Session 16: CI/CD Pipelines with GitHub Actions"
authors = ["Student <student@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
