[tool.poetry]
name = "aula-16"
version = "0.1.0"
description = "Session 16: CI/CD Pipelines with GitHub Actions"
authors = ["Student <student@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
safety = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
