[tool.poetry]
name = "aula-4-multiprocessing"
version = "0.1.0"
description = "Python Multiprocessing and Parallel Computing"
authors = ["Backend Course <backend@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
